Fix error position on usersettings & fix text cut off for lang btns

--- a/frontend/src/components/Event/EventForm.css
+++ b/frontend/src/components/Event/EventForm.css
@@ -138,7 +138,7 @@
   white-space: nowrap;
   border: none;
   border-radius: 20px;
-  width: 70px;
+  width: 80px;
   height: 22px;
   border: none;
   font-size: .75rem;
